--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -15,7 +15,19 @@
   <ItemGroup>
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2451_Biffa\Prevu.Synoptics.V2451_Biffa.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2502_Polymer_Processor\Prevu.Synoptics.V2502_Polymer_Processor.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2932_Infinya\Prevu.Synoptics.V2932_Infinya.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3168_Sirplaste\Prevu.Synoptics.V3168_Sirplaste.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3255-2_Mazzuchelli\Prevu.Synoptics.V3255-Q42_Mazzuchelli.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3255_Mazzuchelli\Prevu.Synoptics.V3255-Q41_Mazzuchelli.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3510_Greentech_Romania\Prevu.Synoptics.V3510_Greentech_Romania.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3870-Center_Gomma\Prevu.Synoptics.V3870-Center_Gomma.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4088-Polimero\Prevu.Synoptics.V4088-Polimero.csproj" />
   </ItemGroup>
 
 </Project>
