--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialDesignColors" Version="2.1.2" />
     <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
     <PackageReference Include="Prevu.UIComponents" Version="1.3.4" />
   </ItemGroup>
