V2911: finish Flex synoptics

--- a/Prevu.Synoptics.V2911_Flex/Prevu.Synoptics.V2911_Flex.csproj
+++ b/Prevu.Synoptics.V2911_Flex/Prevu.Synoptics.V2911_Flex.csproj
@@ -40,6 +40,33 @@
 	  <Compile Update="D371.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
+	  <Compile Update="D376.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D430.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D474.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D810.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D820.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D446.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D873.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D883_2.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
+	  <Compile Update="D893.xaml.cs">
+	    <SubType>Code</SubType>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -61,6 +88,21 @@
 	  <Page Update="D180.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
+	  <Page Update="D530.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="D880.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="D883.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="D885.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="D887.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
 	  <Page Update="P020.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
@@ -80,6 +122,21 @@
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
 	  <Page Update="P350.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="P430.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="P460.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="P530.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="P810.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	  </Page>
+	  <Page Update="P880.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
 	</ItemGroup>
