--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2451_Biffa\Prevu.Synoptics.V2451_Biffa.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2502_Polymer_Processor\Prevu.Synoptics.V2502_Polymer_Processor.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2911_Flex\Prevu.Synoptics.V2911_Flex.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2932_Infinya\Prevu.Synoptics.V2932_Infinya.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
