--- a/Prevu.Synoptics.V2911_Flex/Prevu.Synoptics.V2911_Flex.csproj
+++ b/Prevu.Synoptics.V2911_Flex/Prevu.Synoptics.V2911_Flex.csproj
@@ -19,118 +19,118 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="D018.xaml.cs">
+	  <Compile Update="Details\D018.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D032.xaml.cs">
+	  <Compile Update="Details\D032.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D330.xaml.cs">
+	  <Compile Update="Details\D330.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D335.xaml.cs">
+	  <Compile Update="Details\D335.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D354.xaml.cs">
+	  <Compile Update="Details\D354.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D371.xaml.cs">
+	  <Compile Update="Details\D371.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D376.xaml.cs">
+	  <Compile Update="Details\D376.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D430.xaml.cs">
+	  <Compile Update="Details\D430.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D474.xaml.cs">
+	  <Compile Update="Details\D474.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D810.xaml.cs">
+	  <Compile Update="Details\D810.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D820.xaml.cs">
+	  <Compile Update="Details\D820.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D446.xaml.cs">
+	  <Compile Update="Details\D446.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D873.xaml.cs">
+	  <Compile Update="Details\D873.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
-	  <Compile Update="D883_2.xaml.cs">
+	  <Compile Update="Details\D883_2.xaml.cs">
 	    <SubType>Code</SubType>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Page Update="D020.xaml">
+	  <Page Update="Details\D020.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D140.xaml">
+	  <Page Update="Details\D140.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D150.xaml">
+	  <Page Update="Details\D150.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D170.xaml">
+	  <Page Update="Details\D170.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D190.xaml">
+	  <Page Update="Details\D190.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D180.xaml">
+	  <Page Update="Details\D180.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D530.xaml">
+	  <Page Update="Details\D530.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D880.xaml">
+	  <Page Update="Details\D880.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D887.xaml">
+	  <Page Update="Details\D887.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D885.xaml">
+	  <Page Update="Details\D885.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="D883.xaml">
+	  <Page Update="Details\D883.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P020.xaml">
+	  <Page Update="Pages\P020.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P100.xaml">
+	  <Page Update="Pages\P100.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P140.xaml">
+	  <Page Update="Pages\P140.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P230.xaml">
+	  <Page Update="Pages\P230.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P288.xaml">
+	  <Page Update="Pages\P288.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P330.xaml">
+	  <Page Update="Pages\P330.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P350.xaml">
+	  <Page Update="Pages\P350.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P430.xaml">
+	  <Page Update="Pages\P430.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P460.xaml">
+	  <Page Update="Pages\P460.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P530.xaml">
+	  <Page Update="Pages\P530.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P810.xaml">
+	  <Page Update="Pages\P810.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
-	  <Page Update="P880.xaml">
+	  <Page Update="Pages\P880.xaml">
 	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
 	  </Page>
 	</ItemGroup>
