V3085: Add Silo + Screw before DCEs

--- a/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
+++ b/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D521.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="D511.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D474.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
