Project Test update for Prevu.Details

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Prevu.Details\Prevu.Details.csproj" />
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
