V3085 : Sostituzione due FP400 con FP350

--- a/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
+++ b/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
@@ -25,10 +25,10 @@
     <Compile Update="D511.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D474.xaml.cs">
+    <Compile Update="D474_FP350.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D464.xaml.cs">
+    <Compile Update="D464_FP350.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D298.xaml.cs">
@@ -46,6 +46,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="D464.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="D474.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="D510.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
@@ -79,10 +85,16 @@
     <Page Update="P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
+    <Page Update="P464.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
     <Page Update="P474.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P464.xaml">
+    <Page Update="P474_FP350.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P464_FP350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P520.xaml">
