Prevu.Details: Added new pages

--- a/Prevu.Details/Prevu.Details.csproj
+++ b/Prevu.Details/Prevu.Details.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="HeatExchanger\DET_0xx_HEAT_HeatExchangerNoSteamPressure.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="SeparationTank\DET_005_SEP_5Paddles.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -30,6 +33,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="SeparationTank\DET_005_SEP_5PaddlesPreWash.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="SeparationTank\DET_0xx_SEP_3Paddles.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="SeparationTank\DET_012_SEP_4Paddles.xaml.cs">
@@ -107,7 +113,7 @@
     <Page Update="Nastri\DET_022_NT_BottleSorterFastConveyorRoll.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="Nastri\DET_023_NT_BottleSorterFastConveyor.xaml">
+    <Page Update="Nastri\DET_017_NT_BottleSorterFastConveyor.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Nastri\DET_016_NT_ConveyorMetalDetectorDiverter.xaml">
