V3168: Aggiornamento per aggiunta area FKS

--- a/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
+++ b/Prevu.Synoptics.V3168_Sirplaste/Prevu.Synoptics.V3168_Sirplaste.csproj
@@ -19,31 +19,31 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="D354.xaml.cs">
+    <Compile Update="Details\D354.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D376.xaml.cs">
+    <Compile Update="Details\D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D220.xaml.cs">
+    <Compile Update="Details\D220.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D371.xaml.cs">
+    <Compile Update="Details\D371.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D430.xaml.cs">
+    <Compile Update="Details\D430.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D810.xaml.cs">
+    <Compile Update="Details\D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D970.xaml.cs">
+    <Compile Update="Details\D970.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D999.xaml.cs">
+    <Compile Update="Details\D999.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D998.xaml.cs">
+    <Compile Update="Details\D998.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D999_2.xaml.cs">
@@ -52,49 +52,64 @@
     <Compile Update="D998_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D997.xaml.cs">
+    <Compile Update="Details\D997.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D873.xaml.cs">
+    <Compile Update="Details\D873.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="D530.xaml">
+    <Page Update="Details\D530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D970.xaml">
+    <Page Update="Details\D890.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Details\D970.xaml">
       <SubType>Designer</SubType>
     </Page>
-    <Page Update="P997.xaml">
+    <Page Update="Details\D920.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P810.xaml">
+    <Page Update="Details\D880.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P288.xaml">
+    <Page Update="Pages\P920.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P020.xaml">
+    <Page Update="Pages\P880.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P210.xaml">
+    <Page Update="Pages\P997.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P230.xaml">
+    <Page Update="Pages\P810.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P330.xaml">
+    <Page Update="Pages\P288.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P350.xaml">
+    <Page Update="Pages\P020.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P430.xaml">
+    <Page Update="Pages\P210.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P530.xaml">
+    <Page Update="Pages\P230.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Pages\P330.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Pages\P350.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Pages\P430.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Pages\P530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
   </ItemGroup>
