V2868: Pulizia e correzioni codice

--- a/Prevu.Synoptics.V2868-Termoplasticos/Prevu.Synoptics.V2868-Termoplasticos.csproj
+++ b/Prevu.Synoptics.V2868-Termoplasticos/Prevu.Synoptics.V2868-Termoplasticos.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="D298.xaml.cs">
+    <Compile Update="Details\D298.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D354.xaml.cs">
@@ -29,10 +29,10 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D430.xaml.cs">
+    <Compile Update="Details\D430.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D430_2.xaml.cs">
+    <Compile Update="Details\D430_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D810.xaml.cs">
@@ -44,49 +44,43 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="D464.xaml">
+    <Page Update="Details\D474.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D474.xaml">
+    <Page Update="Details\D530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D510.xaml">
+    <Page Update="Details\D540.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D520.xaml">
+    <Page Update="Details\D464.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D530.xaml">
+    <Page Update="Pages\P020.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="D540.xaml">
+    <Page Update="Pages\P230.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P020.xaml">
+    <Page Update="Pages\P288.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P230.xaml">
+    <Page Update="Pages\P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P288.xaml">
+    <Page Update="Pages\P464.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P430.xaml">
+    <Page Update="Pages\P474.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P464.xaml">
+    <Page Update="Pages\P510.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P474.xaml">
+    <Page Update="Pages\P520.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="P510.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="P520.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="P570.xaml">
+    <Page Update="Pages\P570.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="WaterView.xaml">
