--- a/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbais.csproj
+++ b/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbais.csproj
@@ -20,7 +20,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="D354.xaml.cs">
+    <Compile Update="L1\Details\L1_D810.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="L1\Details\L1_D430.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="L0\Details\L0_D371.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="L0\Details\L0_D354.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="D376.xaml.cs">
@@ -29,29 +38,46 @@
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D997.xaml.cs">
+    <Compile Update="L1_D997.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="L0\Details\L0_D320.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="L1\Details\L1_D320.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
-    <Page Update="L0\Pages\L0_P320.xaml">
+    <Page Update="L1\Details\L1_D530.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L0\Pages\L0_P330.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L1\Pages\L1_P440.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L1\Pages\L1_P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="L1\Pages\L1_P230.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L0_P508.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="L2\Pages\L2_P230.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
     </Page>
+    <Page Update="L1\Pages\L1_P510.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="L1\Details\" />
     <Folder Include="L2\Details\" />
   </ItemGroup>
 
