V4659: First full release

--- a/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbais.csproj
+++ b/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbais.csproj
@@ -38,13 +38,19 @@
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="L1_D997.xaml.cs">
+    <Compile Update="L0\Details\L0_D997.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="L0\Details\L0_D320.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Update="L1\Details\L1_D320.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="L2\Details\L2_D810.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="L2\Details\L2_D430.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -65,7 +71,19 @@
     <Page Update="L1\Pages\L1_P230.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="L0_P508.xaml">
+    <Page Update="L0\Pages\L0_P508.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L2\Details\L2_D530.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L2\Pages\L2_P430.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L2\Pages\L2_P440.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="L2\Pages\L2_P510.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="L2\Pages\L2_P230.xaml">
@@ -75,10 +93,6 @@
     <Page Update="L1\Pages\L1_P510.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="L2\Details\" />
   </ItemGroup>
 
 </Project>
