--- a/Prevu.Synoptics.V4228-RES/Prevu.Synoptics.V4228-RES.csproj
+++ b/Prevu.Synoptics.V4228-RES/Prevu.Synoptics.V4228-RES.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <RootNamespace>Prevu.Synoptics</RootNamespace>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
@@ -11,7 +11,7 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignColors" Version="2.1.2" />
     <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
-    <PackageReference Include="Prevu.UIComponents" Version="1.5.1" />
+    <PackageReference Include="Prevu.UIComponents" Version="1.5.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Details\D455.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Details\D474.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
