V4309: Vari Fix e Spostamenti

--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Prevu.Synoptics.V4309_AlplaSudAfrica.csproj
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Prevu.Synoptics.V4309_AlplaSudAfrica.csproj
@@ -27,6 +27,9 @@
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Details\D992.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D997.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -150,7 +153,7 @@
     <Page Update="Pages\P350.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="Pages\P380.xaml">
+    <Page Update="Pages\P430.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Pages\P443.xaml">
@@ -159,7 +162,7 @@
     <Page Update="Pages\P460.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
-    <Page Update="Pages\P510.xaml">
+    <Page Update="Pages\P530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="Pages\P608.xaml">
