--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Prevu.Synoptics.V4309_AlplaSudAfrica.csproj
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Prevu.Synoptics.V4309_AlplaSudAfrica.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <UseWPF>true</UseWPF>
-    <RootNamespace></RootNamespace>
-    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+	  <RootNamespace>Prevu.Synoptics</RootNamespace>
+	  <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+	  <AssemblyName>Prevu.Synoptics</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
