Prevu.Drawings: Added HotWash Continuos Detail and example for Synoptic page

--- a/Prevu.Details/Prevu.Details.csproj
+++ b/Prevu.Details/Prevu.Details.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Reactors\STR_HotWashContinuos.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="HeatExchanger\DET_0xx_HEAT_HeatExchangerNoSteamPressure.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -94,6 +97,12 @@
     </Page>
     <Page Update="BaleBraker\DET_021_BB_Hyd3Shaft.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="ExampleForHotWashContinuos.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="Reactors\STR_HotWashContinuos.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Update="Dryers\DET_008_DRY_3Resistor.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
