--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -17,6 +17,8 @@
     <ProjectReference Include="..\Prevu.Details\Prevu.Details.csproj" />
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V4228-RES\Prevu.Synoptics.V4228-RES.csproj" />
   </ItemGroup>
 
