--- a/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbeis.csproj
+++ b/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbeis.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="L0\Details\L0_D997.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="L1\Details\L1_D530.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
