Prevu.Deteils: Added Bag station with shake

--- a/Prevu.Details/Prevu.Details.csproj
+++ b/Prevu.Details/Prevu.Details.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="BigBags\DoubleBagShake.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Reactors\STR_HotWashContinuos.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -97,6 +100,9 @@
     </Page>
     <Page Update="BaleBraker\DET_021_BB_Hyd3Shaft.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="BigBags\DoubleBagShake.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Update="ExampleForHotWashContinuos.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
