--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -19,7 +19,11 @@
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V4228-RES\Prevu.Synoptics.V4228-RES.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4659_Steinbais\Prevu.Synoptics.V4659_Steinbeis.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4978_CEDO\Prevu.Synoptics.V4978_CEDO.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V5540-Apollonia\Prevu.Synoptics.V5540-Apollonia.csproj" />
   </ItemGroup>
 
 </Project>
