V3085: Update FRo Second Grinder Addon

--- a/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
+++ b/Prevu.Synoptics.V3085_Anviplas/Prevu.Synoptics.V3085_Anviplas.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="D215.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D521.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -68,6 +71,9 @@
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P230.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    </Page>
+    <Page Update="P210.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
     </Page>
     <Page Update="P288.xaml">
