V3923: Added new Detail componnet for Microfilter

--- a/Prevu.Synoptics.V3923_Evanses/Prevu.Synoptics.V3923_Evanses.csproj
+++ b/Prevu.Synoptics.V3923_Evanses/Prevu.Synoptics.V3923_Evanses.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Details\D286.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D354.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
