--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -19,8 +19,13 @@
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2048-ReCiclar_CMF\Prevu.Synoptics.V2048-ReCiclar_CMF.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V2150_Planeta\Prevu.Synoptics.V2150_Planeta.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V2911_Flex\Prevu.Synoptics.V2911_Flex.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V3001-COVERIS\Prevu.Synoptics.V3001-COVERIS.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3085_Anviplas\Prevu.Synoptics.V3085_Anviplas.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3960_CristalPet\Prevu.Synoptics.V3960_CristalPet.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4035_EcoGreen\Prevu.Synoptics.V4035_EcoGreen.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V4228-RES\Prevu.Synoptics.V4228-RES.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4309_AlplaSudAfrica\Prevu.Synoptics.V4309_AlplaSudAfrica.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V4659_Steinbais\Prevu.Synoptics.V4659_Steinbeis.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V4978_CEDO\Prevu.Synoptics.V4978_CEDO.csproj" />
     <ProjectReference Include="..\Prevu.Synoptics.V5540-Apollonia\Prevu.Synoptics.V5540-Apollonia.csproj" />
