V4300 - Update with new DETs

--- a/Prevu.Synoptics.V4300_Covinil/Prevu.Synoptics.V4300_Covinil.csproj
+++ b/Prevu.Synoptics.V4300_Covinil/Prevu.Synoptics.V4300_Covinil.csproj
@@ -26,6 +26,15 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Details\D212.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D818.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D808.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Details\D820_2.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
