Prevu.Synoptics : Added Details and Pages folders

--- a/Prevu.Synoptics/Prevu.Synoptics.csproj
+++ b/Prevu.Synoptics/Prevu.Synoptics.csproj
@@ -33,4 +33,9 @@
     </Compile>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Details\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
