--- a/Prevu.Synoptics.V5688_Aliplast/Prevu.Synoptics.V5688_Aliplast.csproj
+++ b/Prevu.Synoptics.V5688_Aliplast/Prevu.Synoptics.V5688_Aliplast.csproj
@@ -5,6 +5,7 @@
     <UseWPF>true</UseWPF>
     <RootNamespace>Prevu.Synoptics</RootNamespace>
     <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
+    <AssemblyName>Prevu.Synoptics</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
