--- a/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbeis.csproj
+++ b/Prevu.Synoptics.V4659_Steinbais/Prevu.Synoptics.V4659_Steinbeis.csproj
@@ -50,6 +50,9 @@
     <Compile Update="L2\Details\L2_D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="L2\Details\L2_D320.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="L2\Details\L2_D430.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
