--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Prevu.Details\Prevu.Details.csproj" />
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4309_AlplaSudAfrica\Prevu.Synoptics.V4309_AlplaSudAfrica.csproj" />
   </ItemGroup>
 
 </Project>
