--- a/Prevu.Synoptics.V4125_Cotiplast-FILM/Prevu.Synoptics.V4125_Cotiplast-FILM.csproj
+++ b/Prevu.Synoptics.V4125_Cotiplast-FILM/Prevu.Synoptics.V4125_Cotiplast-FILM.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Details\D286.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D354.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
