V4126: General Update and fix on P880

--- a/Prevu.Synoptics.V4126_Cotiplast-PET/Prevu.Synoptics.V4126_Cotiplast-PET.csproj
+++ b/Prevu.Synoptics.V4126_Cotiplast-PET/Prevu.Synoptics.V4126_Cotiplast-PET.csproj
@@ -21,6 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Details\D286.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Details\D883.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
