--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -17,7 +17,9 @@
     <ProjectReference Include="..\Prevu.Details\Prevu.Details.csproj" />
     <ProjectReference Include="..\Prevu.Drawings\Prevu.Drawings.csproj" />
     <ProjectReference Include="..\Prevu.Localization\Prevu.Localization.csproj" />
-    <ProjectReference Include="..\Prevu.Synoptics.V4309_AlplaSudAfrica\Prevu.Synoptics.V4309_AlplaSudAfrica.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V3923_Evanses\Prevu.Synoptics.V3923_Evanses.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V4035_EcoGreen\Prevu.Synoptics.V4035_EcoGreen.csproj" />
+    <ProjectReference Include="..\Prevu.Synoptics.V6120_Novatex\Prevu.Synoptics.V6120_Novatex.csproj" />
   </ItemGroup>
 
 </Project>
