--- a/Prevu.Synoptics.V6815_Enviroo/Prevu.Synoptics.V6815_Enviroo.csproj
+++ b/Prevu.Synoptics.V6815_Enviroo/Prevu.Synoptics.V6815_Enviroo.csproj
@@ -24,6 +24,42 @@
     <Compile Update="D354.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Details\D085.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D083.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D081.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D526.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D443.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D470.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D455.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D450.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D380.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D370.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D288.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D110.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Details\D371.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
