V7186 added PIT detail pages

--- a/Prevu.Synoptics.V7186_Aliplast/Prevu.Synoptics.V7186_Aliplast.csproj
+++ b/Prevu.Synoptics.V7186_Aliplast/Prevu.Synoptics.V7186_Aliplast.csproj
@@ -20,7 +20,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Details\" />
+    <Compile Update="Details\D085.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D083.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D081.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
