--- a/Prevu.Synoptics.V6939_Polysmart/Prevu.Synoptics.V6939_Polysmart.csproj
+++ b/Prevu.Synoptics.V6939_Polysmart/Prevu.Synoptics.V6939_Polysmart.csproj
@@ -26,10 +26,70 @@
     <Compile Update="D376.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Details\D556.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D570.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D588.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="D810.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Update="D997.xaml.cs">
+    <Compile Update="Details\D587.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D873.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D997.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D301.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D330.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D354.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D370.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D371.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D376.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D380.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D430.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D576.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D450.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D455.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D470.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D526.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D810.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Details\D820.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
